<resources>
    <string name="app_name">ZadanieKotlin</string>
    <string name="title_home">Główna</string>
    <string name="title_dashboard">Katalog</string>
    <string name="title_notifications">Koszyk</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_more">Więcej</string>
    <string-array name="language_options">
        <item>Polski</item>
        <item>English</item>
    </string-array>
    <string-array name="currency_options">
        <item>Złoty</item>
        <item>Euro</item>
    </string-array>
    <string name="cat_woman">Kobiety</string>
    <string name="cat_men">Mężczyźni</string>
    <string name="cat_toddler">Niemowlak</string>
    <string name="cat_girl">Dziewczynka</string>
    <string name="cat_boy">Chłopiec</string>
    <string name="basket_descr">Ceny produktów:</string>
    <string name="basket_checkout">Przejdź do kasy</string>
    <string name="item_price" translatable="false">%.2f zł</string>
    <string name="sum_price" translatable="false">%1$.2f zł</string>
    <string name="more_language">Zmień język</string>
    <string name="more_logout">Wyloguj się</string>
    <string name="basket_empty">Brak produktow w koszyku</string>
    <string name="basket_notLoggedIn">Koszyk dostępny tylko po zalogowaniu</string>
    <string name="filter_chooseCat">Wybierz kategorię</string>
    <string name="filter_confirm">Zatwierdź</string>
    <string name="filter_cancel">Anuluj</string>
    <string name="login_back">Wstecz</string>
    <string name="login_register">Zarejestruj</string>
    <string name="login_message">Zaloguj się</string>
    <string name="login_password">Hasło</string>
    <string name="login_hintEmail">Email wymagany</string>
    <string name="login_hintPassword">Hasło wymagane</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="register_message">Zarejestruj się</string>
    <string name="confirm_password">Potwierdź hasło</string>
    <string name="email">Email</string>
    <string name="switch_theme">Zmień motyw</string>
    <string name="more_currency">Zmień walutę</string>
    <string name="title_activity_compose" translatable="false">Compose</string>
</resources>